--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    task wrapper(type: Wrapper){
+        gradleVersion = '6.8.3'
+    }
 }
 
 dependencies {
